--- a/src/pages/Timeline.css
+++ b/src/pages/Timeline.css
@@ -256,22 +256,26 @@
   .timeline-item--left,
   .timeline-item--right {
     justify-content: flex-start;
-    padding-left: 80px;
+    padding-left: 90px;
     padding-right: 0;
   }
 
   .timeline-item--left .timeline-node,
   .timeline-item--right .timeline-node {
-    left: 0;
+    left: 5px;
     right: auto;
+    top: 0;
   }
 
   .timeline-content {
     max-width: none;
+    position: relative;
   }
 
   .timeline-card {
     padding: var(--spacing-md);
+    margin-left: 0;
+    margin-top: 0;
   }
 
   .timeline-card-title {
@@ -287,6 +291,9 @@
     width: 50px;
     height: 50px;
     font-size: 0.7rem;
+    position: absolute;
+    top: 0;
+    z-index: 10;
   }
 }
 
@@ -303,6 +310,27 @@
     flex-direction: column;
     align-items: flex-start;
     gap: var(--spacing-sm);
+  }
+
+  .timeline-item--left,
+  .timeline-item--right {
+    padding-left: 75px;
+  }
+
+  .timeline-node {
+    width: 45px;
+    height: 45px;
+    font-size: 0.6rem;
+    top: 0;
+  }
+
+  .timeline-item--left .timeline-node,
+  .timeline-item--right .timeline-node {
+    left: 5px;
+  }
+
+  .timeline-line {
+    left: 27px;
   }
 }
 
